comment token secrete key in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,33 @@
-# deploy.yml
-name: CI/CD Pipeline for Quasar
+name: Deploy Quasar SPA to GitHub Pages
+
 on:
   push:
-    branches: [ "master", "main" ]
-  pull_request:
-    branches: [ "master", "main" ]
+    branches: [ "master" ] # เปลี่ยนเป็น branch ที่คุณใช้
+
 jobs:
-  build-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Allow pushing to gh-pages
+      
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Cache node_modules
-        uses: actions/cache@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          node-version: '20' # ใช้ Node.js เวอร์ชัน 18 หรือสูงกว่า
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '18'
+      - name: Install dependencies
+        run: npm install
 
-      - name: Install and Build
-        run: |
-          npm install
-          npx quasar build
-
-      - name: Copy index.html to 404.html
-        if: github.ref == 'refs/heads/master'
-        run: cp dist/spa/index.html dist/spa/404.html
+      - name: Build Quasar SPA
+        run: npx quasar build
 
       - name: Deploy to GitHub Pages
-        if: github.ref == 'refs/heads/master'
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ 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 }}
-          publish_dir: ./dist/spa
-          publish_branch: gh-pages
+          github_token: ${{ secrets.MYTOKEN }} # 🔒 Reference the secret
+          publish_dir: dist/spa
+
